# 2024_vision_firsttest

./: 2021级-软件工程-丁利-视觉组第一次考核.md  README.md
ROS2_Notes/: ROS2.md
nav2_ws/install/: local_setup.sh  setup.sh
nav2_ws/install/fishbot_cartographer/share/fishbot_cartographer/: package.sh
nav2_ws/log/: latest_build  latest_list
nav2_ws/src/fishbot_cartographer/: package.xml
nav2_ws/src/fishbot_description/: setup.py
nav2_ws/src/fishbot_description/launch/: display_rviz2.launch.py
nav2_ws/src/fishbot_navigation2/: CMakeLists.txt
testCMake/Test10/: CMakeLists.txt
testCMake/Test11/: CMakeLists.txt
testCMake/Test2/: CMakeLists.txt
testCMake/Test3/: CMakeLists.txt
testCMake/Test4/: CMakeLists.txt
testCMake/Test4/src/: Hello.cpp
testCMake/Test5/: CMakeLists.txt
testCMake/Test6/: CMakeLists.txt
testCMake/Test7/: CMakeLists.txt
testCMake/Test8/: CMakeLists.txt  run_test.sh
testCMake/Test9/: CMakeLists.txt
testCMake/Test9/build.ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
testOpencv/: .gitignore  CMakeLists.txt  Notes.md
testOpencv/src/: CMakeLists.txt  TestBinarization.cpp  TestCanny.cpp  TestCore.cpp  TestDilation.cpp  TestErosion.cpp  TestFilters.cpp  TestSobel.cpp
testpytorch/: test.cpp  test2.txt
testpytorch/train_MNIST/: train.py
testpytorch/train_MNIST/runs/Jun08_00-05-30_DLee/: events.out.tfevents.1686153930.DLee
testpytorch/train_MNIST/runs/Jun08_00-12-39_DLee/: events.out.tfevents.1686154359.DLee
testpytorch/train_MNIST/runs/Jun08_00-13-55_DLee/: events.out.tfevents.1686154435.DLee
(+14 files in other folders)
